# ToDoer

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  config.py  config.yaml  config.yaml.example  docker-compose.yaml  pyproject.toml
src/: settings.py  urls.py
src/tasks/: admin.py  models.py  serializer.py  types.py  urls.py  views.py
src/tasks/migrations/: 0001_initial.py  0002_initial.py
src/tasks/tests/: test_views.py
src/users/: serializer.py  types.py  urls.py  views.py
src/users/migrations/: 0001_initial.py
src/users/tests/: test_views.py
